Fixed overflow.

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -14,6 +14,6 @@ code {
 
 div.col-sm {
   display: inline-block;
-  min-height: 50px;
+  min-height: 67px;
   overflow: hidden;
 }
